@@ -172,6 +172,13 @@
     <td valign="top">Email subject line.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">ignoreInvalidRecipients</td>
+    <td valign="top">Boolean.  Whether the task should try to send
+      the message to as many recipients as possible and should only
+      fail if neither is reachable.  <em>Since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">No, default is false</td>
+  </tr>
 </table>
 
 <h3>Note regarding the attributes containing email addresses</h3>
